--- a/latex_thesis/numerical_evolution/num_ev.tex
+++ b/latex_thesis/numerical_evolution/num_ev.tex
@@ -170,7 +170,7 @@ which depicts a new feature of the orbits. There are evident oscillations of the
 We now study the gravitational radiation emitted by the different binary sources is extracted following to the procedure described in section(\ref{gw_extraction}).\\
 The gravitational singals are shown in Figure(\ref{gw_b3}), (\ref{gw_b4}), (\ref{gw_b5}), (\ref{gw_b6}), (\ref{gw_b7}) and (\ref{gw_b10}).
 In the time interval $t \in (0,0.1)\milli \second$ the gravitational wave of all simulations $\psi_4$ shows an irregular perturbation. 
-In [REF] it is pointed out that there is a numerical noise that could be reduced using a more refined simulations. However,   the simulations are enough accurate for our purpose after that time interval.\\ 
+In \cite{loffler_einstein_2012} it is pointed out that there is a numerical noise that could be reduced using a more refined simulations. However,   the simulations are enough accurate for our purpose after that time interval.\\ 
 %%
 %%
 %%
