--- a/latex_thesis/bibliography/bibthesis.bib
+++ b/latex_thesis/bibliography/bibthesis.bib
@@ -1,3 +1,8 @@
+@Misc{Lorene:web,
+  key =          {LORENE},
+  title =        {{LORENE}: {L}angage {O}bjet pour la {RE}lativit\'e {N}um\'eriqu{E}},
+  url =          {http://www.lorene.obspm.fr/},
+}
 
 @article{loffler_einstein_2012,
 	title = {The Einstein Toolkit: A Community Computational Infrastructure for Relativistic Astrophysics},
@@ -171,7 +176,6 @@
 
 @article{ferrari_quadrupole_nodate,
 	title = {{THE} {QUADRUPOLE} {FORMALISM} {APPLIED} {TO} {BINARY} {SYSTEMS}},
-	pages = {41},
 	author = {Ferrari, Valeria},
 	langid = {english},
 	file = {Ferrari - THE QUADRUPOLE FORMALISM APPLIED TO BINARY SYSTEMS.pdf:/Users/lorenzosperi/Zotero/storage/Y9PPDVVD/Ferrari - THE QUADRUPOLE FORMALISM APPLIED TO BINARY SYSTEMS.pdf:application/pdf}
@@ -291,15 +295,54 @@
   SLACcitation = "%%CITATION = GR-QC/0404056;%%"
 }
 
+@Misc{McLachlan:web,
+  suggested-for ="McLachlan/ML_BSSN",
+  key =          {McLachlan},
+  title =        {{McLachlan}, a Public {BSSN} Code},
+  url =          {http://www.cct.lsu.edu/~eschnett/McLachlan/},
+}
+
+@Article{Gourgoulhon:2000nn,
+  requested-for ="EinsteinInitialData/Meudon_Bin_NS",
+  author =       "Gourgoulhon, Eric and Grandclement, Philippe and
+                  Taniguchi, Keisuke and Marck, Jean-Alain and
+                  Bonazzola, Silvano",
+  title =        "{Quasiequilibrium sequences of synchronized and
+                  irrotational binary neutron stars in general
+                  relativity. I. Method and tests}",
+  journal =      "Phys. Rev. D",
+  volume =       63,
+  year =         2001,
+  pages =        064029,
+  eprint =       "arXiv:gr-qc/0007028",
+  adsurl =
+                  {http://www.slac.stanford.edu/spires/find/hep/www?rawcmd=find+doi+10.1103/PhysRevD.63.064029},
+  doi =          "10.1103/PhysRevD.63.064029",
+  SLACcitation = "%%CITATION = GR-QC/0007028;%%"
+}
+
+@Misc{Kranc:web,
+  suggested-for ="McLachlan/ML_BSSN",
+  key =          {Kranc},
+  title =        {{Kranc}: {Kranc} Assembles Numerical Code},
+  url =          {http://kranccode.org/},
+}
+
 @Article{Brown:2008sb,
-     author =       {Brown, J. David and Diener, Peter and Sarbach,
-                     Olivier and Schnetter, Erik and Tiglio, Manuel},
-     title =        {Turduckening black holes: an analytical and
-                     computational study},
-     journal =      {Phys. Rev. D},
-     eprint =       {arXiv:0809.3533 [gr-qc]},
+     suggested-for ="Einsteinanalysis/Noexcision McLachlan/ML_BSSN",
+     author =       "Brown, J. David and Diener, Peter and Sarbach,
+                     Olivier and Schnetter, Erik and Tiglio, Manuel",
+     title =        "{Turduckening black holes: an analytical and
+                     computational study}",
+     journal =      "Phys. Rev. D",
+     volume =       "79",
+     year =         2009,
+     pages =        044023,
+     eprint =       "arXiv:0809.3533 [gr-qc]",
      adsurl =          {http://www.slac.stanford.edu/spires/find/hep/www?rawcmd=find+doi+10.1103/PhysRevD.79.044023},
-   }
+     doi =          "10.1103/PhysRevD.79.044023",
+     SLACcitation = "%%CITATION = 0809.3533;%%"
+}
 
 @misc{EinsteinToolkit:ascl,
   author = {{Collaborative Effort}},
