--- a/latex_thesis/numerical_evolution/num_ev.tex
+++ b/latex_thesis/numerical_evolution/num_ev.tex
@@ -105,7 +105,7 @@ BBH-b10 & 10 & 0.49299 & +0.061542 \\
 %%
 %%
 %%
-Each initial configuration is then evolved using the \texttt{ML\_BSSN} (\texttt{McLachlan} BSSN) thorn \cite{Brown:2008sb}, the gravitational wave information is extracted using \texttt{WeylScal4} thorn.\\
+Each initial configuration is then evolved using the \texttt{ML\_BSSN} (\texttt{McLachlan} BSSN) thorn \cite{Brown:2008sb,McLachlan:web,Kranc:web}, the gravitational wave information is extracted using \texttt{WeylScal4} thorn.\\
 The orbits of covered by the binaries black hole are shown in Figure(\ref{orbits}).
 %%
 %%
@@ -363,7 +363,7 @@ Such phenomenon could be due to the oscillations of the BBH orbits, however, a m
 \pagebreak
 
 \subsection{Binary Neutron Star}
-We now study the evolution of a binary neutron star (BNS) made of two equal-mass objects rotating with an quasi-equilibrium initial conditions obtained using the software \texttt{Lorene} [REF].
+We now study the evolution of a binary neutron star (BNS) made of two equal-mass objects rotating with an quasi-equilibrium initial conditions obtained using the software \texttt{Lorene} \cite{Lorene:web}.
 The total ADM mass of the system is $M_{\text{ADM}} = 3.251 \, M_{\odot}$.
 Since the two neutron stars are placed at in symmetric initial conditions with respect to the z axis, as in the binary black holes, the problem has a $\pi$ symmetry that reduces the computational cost.
 The hydrodynamics evolution of the neutron stars is achieved using the ideal fluid approximation and the thorn \texttt{GRHydro} \cite{moesta_grhydro:_2014}. 
