--- a/latex_thesis/thesis.tex
+++ b/latex_thesis/thesis.tex
@@ -5,7 +5,7 @@
 
 % le righe importanti
 \usepackage[backend=biber,style=numeric,sorting=none]{biblatex}
-\addbibresource{bibliography/trial.bib} % qui metti il path del file .bib 
+\addbibresource{bibliography/bibthesis.bib} % qui metti il path del file .bib 
 
 %% TITLE
 \author{Lorenzo Speri}
