comment about oscillations

--- a/latex_thesis/numerical_evolution/num_ev.tex
+++ b/latex_thesis/numerical_evolution/num_ev.tex
@@ -358,7 +358,8 @@ Notice that the peak is more narrow for higher values of $b$, since the initial 
 The BBH-b6, BBH-b7 and BBH-b10 depict, as well, the typical peak at twice the orbital angular frequency.
 We confirm that the gravitational wave strain of a binary balck holes source such has an angular frequency at twice the orbital angular frequency of the rotating bodies.\\
 Although the peaks are particularly sharp,  each Figure (\ref{fourier_b6}), (\ref{fourier_b7}) and (\ref{fourier_b10}) manifest a smaller peak at lower frequencies, which has an increasing intensity with the increasing parameter $b$.
-Such phenomenon could be due to the oscillations of the BBH orbits, however, a more accurate analysis is needed to confirm this hypothesis.\\
+Such phenomenon could be due to the oscillations of the BBH orbits and, therfore of the radii.
+We speculate that the oscillations of  the radii Figure(\ref{radius_evolution}) and of the orbital angular velocity Figure(\ref{fourier_omega_b6710}) for high value of $b$ could be due to the interaction of the two massive objects or to a numerical noise. However, a more accurate analysis is needed to confirm one of the hypothesis.\\
 
 \pagebreak
 
