fourier transform of BNS

--- a/latex_thesis/bibliography/bibthesis.bib
+++ b/latex_thesis/bibliography/bibthesis.bib
@@ -4,6 +4,24 @@
   url =          {http://www.lorene.obspm.fr/},
 }
 
+
+@article{mooreGravitationalwaveSensitivityCurves2015,
+  title = {Gravitational-Wave Sensitivity Curves},
+  volume = {32},
+  issn = {0264-9381, 1361-6382},
+  doi = {10.1088/0264-9381/32/1/015014},
+  abstract = {There are several common conventions in use by the gravitational-wave community to describe the amplitude of sources and the sensitivity of detectors. These are frequently confused. We outline the merits of and differences between the various quantities used for parameterizing noise curves and characterizing gravitational-wave amplitudes. We conclude by producing plots that consistently compare different detectors. Similar figures can be generated on-line for general use at http://rhcole.com/apps/GWplotter.},
+  language = {en},
+  number = {1},
+  journal = {Classical and Quantum Gravity},
+  author = {Moore, C J and Cole, R H and Berry, C P L},
+  month = jan,
+  year = {2015},
+  pages = {015014},
+  file = {/Users/lorenzosperi/Zotero/storage/WESW69S5/Moore et al. - 2015 - Gravitational-wave sensitivity curves.pdf}
+}
+
+
 @article{loffler_einstein_2012,
 	title = {The Einstein Toolkit: A Community Computational Infrastructure for Relativistic Astrophysics},
 	volume = {29},
