--- a/latex_thesis/numerical_evolution/num_ev.tex
+++ b/latex_thesis/numerical_evolution/num_ev.tex
@@ -474,6 +474,26 @@ As Thorn would say "gravitational waves will show us details of the bulk motion 
 %%
 %%
 %%
+\pagebreak
+In addition, as we have done for the binary black holes, we study the angular frequency spectrum of the gravitational waves.\\
+Neverthless, the orbital angular frequency is characterized by a lot of noise, it is possible anyway to see that the $\omega$ has a value approximately $2 \, \milli \second ^{-1}$ before the merger, and a value approximately$6 \, \milli \second ^{-1}$ after the merging.
+As expected from the quadrupole formula, the gravitational wave has an angula frequency that is twice the orbital angula frequency for that mentioned values.
+
+\begin{figure}[]
+\centering
+    \textbf{Fourier transforms of the gravitational strain  $\mathcal{F}[h](\omega)$ and orbital angular velocities $\omega$ of BNS}\par\medskip
+\centering
+
+\subfloat[][]
+   {\includegraphics[width=.40\textwidth]{numerical_evolution/fourier_bns.eps}
+   \label{fourier_b6}} \quad
+\subfloat[][]
+   {\includegraphics[width=.40\textwidth]{numerical_evolution/omega_bns.eps} \label{omega_b6}} 
+
+   
+   \caption{•}
+\label{fourier_omega_bns}
+\end{figure}
 
 
  
