--- a/latex_thesis/bibliography/bibthesis.bib
+++ b/latex_thesis/bibliography/bibthesis.bib
@@ -4,6 +4,13 @@
   url =          {http://www.lorene.obspm.fr/},
 }
 
+@article{pasqualiNumericalSimulationsMerger,
+  title = {Numerical {{Simulations}} of the {{Merger}} of {{Neutron Stars}}},
+  language = {en},
+  author = {Pasquali, Michele},
+  pages = {81},
+  file = {/Users/lorenzosperi/Zotero/storage/7RSDUY99/Pasquali - Numerical Simulations of the Merger of Neutron Sta.pdf}
+}
 
 @article{mooreGravitationalwaveSensitivityCurves2015,
   title = {Gravitational-Wave Sensitivity Curves},
