--- a/latex_thesis/effects_gw/ef_gw.tex
+++ b/latex_thesis/effects_gw/ef_gw.tex
@@ -95,8 +95,8 @@ In Figure(\ref{gw_detetctor}), we show the sensitivity curve of the gravitationa
 \centering
     \textbf{Sensitivity of gravitational wave detectors}\par\medskip
 \makebox[\textwidth][c]{\includegraphics[width=0.8\textwidth]{effects_gw/gw_detectors}}
-\caption{Schematic representation of a laser interferomenter gravitational wave detector (Figure from \cite{mooreGravitationalwaveSensitivityCurves2015}).}
-%A. Abramovici et. al. Science, 256:325, 1992: name in zoteroLIGO: The Laser Interferometer Gravitational-Wave Observatory
+\caption{Sensitivity curve of some of the active gravitational wave detectors (Figure from \cite{mooreGravitationalwaveSensitivityCurves2015}).}
+
 \label{gw_detetctor}
 \end{figure}
 %%
