--- a/latex_thesis/numerical_evolution/num_ev.tex
+++ b/latex_thesis/numerical_evolution/num_ev.tex
@@ -439,7 +439,7 @@ As Thorn would say "gravitational waves will show us details of the bulk motion 
    {\includegraphics[width=.45\textwidth]{numerical_evolution/f4.eps}
    \label{f4}} \quad
  \\
-\caption{.}
+\caption{The rest mass density of the binary neutron star evolves from an initial separation of $30.47 M_{\odot}$. We can notice that already from $t=777.6 M_{\odot}$ the matter starts to be ejected and exchanged between the two stars.}
 \label{f_1234}
 \end{figure}
 %%
@@ -467,7 +467,7 @@ As Thorn would say "gravitational waves will show us details of the bulk motion 
    {\includegraphics[width=.45\textwidth]{numerical_evolution/f8.eps}
    \label{f8}} \quad
  \\
-\caption{.}
+\caption{The resta mass density evolution in the final stage is dominated by an ejection of matter. The neutron stars' cores bounce back and forth and releases matter in an inspiral shape.}
 \label{f_5678}
 \end{figure}
 %%
@@ -475,8 +475,8 @@ As Thorn would say "gravitational waves will show us details of the bulk motion 
 %%
 %%
 \pagebreak
-In addition, as we have done for the binary black holes, we study the angular frequency spectrum of the gravitational waves.\\
-Neverthless, the orbital angular frequency is characterized by a lot of noise, it is possible anyway to see that the $\omega$ has a value approximately $2 \, \milli \second ^{-1}$ before the merger, and a value approximately$6 \, \milli \second ^{-1}$ after the merging.
+In addition, as we have done for the binary black holes, we study the angular frequency spectrum of the gravitational waves from Figure(\ref{fourier_omega_bns}).\\
+Neverthless, the orbital angular frequency is characterized by a lot of noise\footnote{the values of $\omega$ are particularly spread out because of the low sampling frequency and problems in the acquisition of data. It is possible to better appreciate this reasons analyzing the data given at \url{https://github.com/lorenzsp/thesis/tree/master/gw}}, it is possible anyway to see that the $\omega$ has a value approximately $2 \, \milli \second ^{-1}$ before the merger, and a value approximately $6 \, \milli \second ^{-1}$ after the merging.
 As expected from the quadrupole formula, the gravitational wave has an angula frequency that is twice the orbital angula frequency for that mentioned values.
 
 \begin{figure}[]
@@ -491,9 +491,10 @@ As expected from the quadrupole formula, the gravitational wave has an angula fr
    {\includegraphics[width=.40\textwidth]{numerical_evolution/omega_bns.eps} \label{omega_b6}} 
 
    
-   \caption{•}
+   \caption{The Fourier trasnform of the gravitational strain $|\mathcal{F}[h]|$ shows a borad distribution of angular frequencies, however the two highest peaks are at $\omega= 4.3 \milli \second^-1$ and at $\omega= 5.5 \milli \second^-1$. On the right side the orbital angular momentum of the binary system is stable around $2 \, \milli \second ^{-2}$ before the merger. After $10 \milli \second$ the orbital angular momentum is in a range $(4.5,7) \milli \second ^{-1} $. }
 \label{fourier_omega_bns}
 \end{figure}
+
 
 
  
