--- a/latex_thesis/thesis.tex
+++ b/latex_thesis/thesis.tex
@@ -65,11 +65,10 @@ A really interesting and fascinating abstract
 \input{conclusion/conclusion.tex}
 
 
-
-
 %% APPENDICES
-%\section{Appendices}
-%\input{appendix/resampling}
+%\clearpage
+\section*{Acknowledgements}
+\input{appendix/ack.tex}
 
 %% MAKE BIBLIOGRAPHY
 %\bibliographystyle{unsrt}
