--- a/latex_thesis/einstein_eq/einstein_eq_gw.tex
+++ b/latex_thesis/einstein_eq/einstein_eq_gw.tex
@@ -1,5 +1,5 @@
 Solving the Einstein's field equation is a mathematically complicated problem, because in general it is difficult to find solutions to the field equations which are non-linear    \cite{weinsteinEinsteinDiscoveryGravitational2016}.
-Therefore, we will obtain the gravitational wave solutions using the weak field linearized approximation and we will discuss the mathematical constraints that lead to the two radiative degrees of freedom of the Einsten's feild equation.\\
+Therefore, we will obtain the gravitational wave solutions using the weak field linearized approximation and we will discuss the  gauge transformations that lead to the two radiative degrees of freedom of the Einsten's field equation.\\
 
 \subsection{Linearized Einstein's field equation}
 The Einstein's field equation is a tensor equation that represents how the geometry of spacetime is related to the presence of masses and energy:
