--- a/latex_thesis/thesis.tex
+++ b/latex_thesis/thesis.tex
@@ -10,7 +10,9 @@
 %% TITLE
 \author{Lorenzo Speri}
 \title{\bf{Analyzing Gravitational Waves through Numerical Simulations of Compact Binaries}}
-\date{May 2018}
+\date{Supervisor:
+Bruno Giacomazzo\\
+July 2018}
 
 %% LOAD PACKAGES
 \input{shared/preamble}
@@ -66,7 +68,7 @@ A really interesting and fascinating abstract
 
 
 %% APPENDICES
-%\clearpage
+\clearpage
 \section*{Acknowledgements}
 \input{appendix/ack.tex}
 
